{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "4b549bd8-2cbd-41f8-82a1-57abb9f99554",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "fdd7601d-8a74-4130-874a-419271ca6ad5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "598e9839-4782-4851-a8fd-b2ef29e3c46f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}